--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,9 @@
     "imagesloaded": "~3.2.0",
     "artTemplate": "~3.0.1",
     "reset-css": "~2.0.2011012602",
-    "noty": "^2.3.8"
+    "noty": "^2.3.8",
+    "fastclick": "^1.0.6",
+    "js-cookie": "^2.1.3",
+    "ki-router": "^1.1.17"
   }
 }
